# projetGL

./: .gitignore  CMakeLists.txt
src/: include.h  main.cpp
src/geometry/: geometry.cpp  geometry.h
src/shaders/: shaders.cpp  shaders.h
src/shaders/programs/: test.fs  test.vs
src/util/: util.cpp  util.h
